--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Listas de fuentes en HTML
 <li style="font-family: Arial">Arial</li>
 <li style="font-family: Comic Sans MS">Comic Sans MS</li>
 <li style="font-family: Georgia">Georgia</li>
-<li style="font-family: Impact">Impact</li>
+<li style="font-family: Impact">Impaaaaaact</li>
 <li style="font-family: Times New Roman">Times New Roman</li>
 <li style="font-family: Verdana">tutututu</li>
 </ul>
